Fix Bug 309519 -  [Tree] New client implementation for Tree