@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2002, 2009 Innoopract Informationssysteme GmbH.
+ * Copyright (c) 2002, 2010 Innoopract Informationssysteme GmbH.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -31,11 +31,16 @@ public final class TreeLCA extends AbstractWidgetLCA {
   private static final String PROP_SELECTION_LISTENERS = "selectionListeners";
   static final String PROP_HEADER_HEIGHT = "headerHeight";
   static final String PROP_HEADER_VISIBLE = "headerVisible";
-  static final String PROP_COLUMN_ORDER = "columnOrder";
+  static final String PROP_COLUMN_COUNT = "columnCount";
+  static final String PROP_TREE_COLUMN = "treeColumn";
+  static final String PROP_ITEM_HEIGHT = "itemHeight";
+  static final String PROP_TOP_ITEM_INDEX = "topItemIndex";
   static final String PROP_SCROLL_LEFT = "scrollLeft";
   static final String PROP_HAS_H_SCROLL_BAR = "hasHScrollBar";
   static final String PROP_HAS_V_SCROLL_BAR = "hasVScrollBar";
-
+  static final String PROP_ITEM_METRICS = "itemMetrics";
+  static final String PROP_LINES_VISIBLE = "linesVisible";
+  
   private static final Integer DEFAULT_SCROLL_LEFT = new Integer( 0 );
 
   public void preserveValues( final Widget widget ) {
@@ -48,13 +53,14 @@ public final class TreeLCA extends AbstractWidgetLCA {
                       new Integer( tree.getHeaderHeight() ) );
     adapter.preserve( PROP_HEADER_VISIBLE,
                       Boolean.valueOf( tree.getHeaderVisible() ) );
-    int[] values = tree.getColumnOrder();
-    Integer[] columnOrder = new Integer[ values.length ];
-    for( int i = 0; i < values.length; i++ ) {
-      columnOrder[ i ] = new Integer( values[ i ] );
-    }
-    adapter.preserve( PROP_COLUMN_ORDER, columnOrder );
+    adapter.preserve( PROP_LINES_VISIBLE,
+                      Boolean.valueOf( tree.getLinesVisible() ) );
+    preserveItemMetrics( tree );
+    adapter.preserve( PROP_COLUMN_COUNT, new Integer( tree.getColumnCount() ) );
+    adapter.preserve( PROP_TREE_COLUMN, getTreeColumn( tree ) );
+    adapter.preserve( PROP_ITEM_HEIGHT, new Integer( tree.getItemHeight() ) );
     adapter.preserve( PROP_SCROLL_LEFT, getScrollLeft( tree ) );
+    adapter.preserve( PROP_TOP_ITEM_INDEX, new Integer( getTopItemIndex( tree ) ) );
     adapter.preserve( PROP_HAS_H_SCROLL_BAR, hasHScrollBar( tree ) );
     adapter.preserve( PROP_HAS_V_SCROLL_BAR, hasVScrollBar( tree ) );
     WidgetLCAUtil.preserveCustomVariant( tree );
@@ -63,7 +69,8 @@ public final class TreeLCA extends AbstractWidgetLCA {
   public void readData( final Widget widget ) {
     Tree tree = ( Tree )widget;
     readSelection( tree );
-    readScrollPosition( tree );
+    readScrollLeft( tree );
+    readTopItemIndex( tree );
     processWidgetSelectedEvent( tree );
     processWidgetDefaultSelectedEvent( tree );
     ControlLCAUtil.processMouseEvents( tree );
@@ -75,31 +82,48 @@ public final class TreeLCA extends AbstractWidgetLCA {
   public void renderInitialization( final Widget widget ) throws IOException {
     Tree tree = ( Tree )widget;
     JSWriter writer = JSWriter.getWriterFor( tree );
-    StringBuffer style = new StringBuffer();
+    writer.newWidget( "org.eclipse.rwt.widgets.Tree" );
+    ControlLCAUtil.writeStyleFlags( tree );
     if( ( tree.getStyle() & SWT.MULTI ) != 0 ) {
-      style.append( "multi|" );
+      writer.set( "hasMultiSelection", true );
+    }
+    if( ( tree.getStyle() & SWT.FULL_SELECTION ) != 0 ) {
+      writer.set( "hasFullSelection", true );
+    } else {
+      Rectangle textMargin = getTreeAdapter( tree ).getTextMargin();
+      writer.set( "selectionPadding", new int[]{
+        textMargin.x,
+        textMargin.width - textMargin.x
+      } );
     }
     if( ( tree.getStyle() & SWT.CHECK ) != 0 ) {
-      style.append( "check|" );
+      writer.set( "hasCheckBoxes", true );
+      writer.set( "checkBoxMetrics", new Object[]{
+        new Integer( getTreeAdapter( tree ).getCheckLeft() ),
+        new Integer( getTreeAdapter( tree ).getCheckWidth() )
+      } );
     }
     if( ( tree.getStyle() & SWT.VIRTUAL ) != 0 ) {
-      style.append( "virtual|" );
+      writer.set( "isVirtual", true );
     }
-    writer.newWidget( "org.eclipse.swt.widgets.Tree", new Object[]{
-      style.toString()
-    } );
-    ControlLCAUtil.writeStyleFlags( tree );
+    writeIndentionWidth( tree );    
   }
 
   public void renderChanges( final Widget widget ) throws IOException {
     Tree tree = ( Tree )widget;
     ControlLCAUtil.writeChanges( tree );
+    writeItemHeight( tree );
+    writeItemMetrics( tree );
+    // NOTE : Client currently requires itemMetrics before columnCount
+    writeColumnCount( tree );  
+    writeLinesVisible( tree );
+    writeTreeColumn( tree );   
+    writeTopItem( tree );
+    writeScrollBars( tree );
     updateSelectionListener( tree );
     writeHeaderHeight( tree );
     writeHeaderVisible( tree );
-    writeColumnOrder( tree );
     writeScrollLeft( tree );
-    writeOverflow( tree );
     WidgetLCAUtil.writeCustomVariant( tree );
   }
 
@@ -112,7 +136,7 @@ public final class TreeLCA extends AbstractWidgetLCA {
     int evtId = ControlEvent.CONTROL_RESIZED;
     ControlEvent evt = new ControlEvent( control, evtId );
     evt.processEvent();
-  }
+  } 
 
   private static void processWidgetSelectedEvent( final Tree tree ) {
     HttpServletRequest request = ContextProvider.getRequest();
@@ -176,27 +200,23 @@ public final class TreeLCA extends AbstractWidgetLCA {
     }
   }
 
-  private static void readScrollPosition( final Tree tree ) {
+  private static void readScrollLeft( final Tree tree ) {
     String left = WidgetLCAUtil.readPropertyValue( tree, "scrollLeft" );
-    String top = WidgetLCAUtil.readPropertyValue( tree, "scrollTop" );
-    if( left != null && top != null ) {
-      Object adapter = tree.getAdapter( ITreeAdapter.class );
-      final ITreeAdapter treeAdapter = ( ITreeAdapter )adapter;
-      final int newScrollLeft = parsePosition( left );
-      final int newScrollTop = parsePosition( top );
-      final int oldScrollTop = treeAdapter.getScrollTop();
-      treeAdapter.setScrollLeft( newScrollLeft );
-      treeAdapter.setScrollTop( newScrollTop );
-      if( oldScrollTop != newScrollTop ) {
-        ProcessActionRunner.add( new Runnable() {
-          public void run() {
-            treeAdapter.checkAllData( tree );
-          }
-        } );
-      }
+    if( left != null ) {
+      final ITreeAdapter treeAdapter = getTreeAdapter( tree );
+      treeAdapter.setScrollLeft( parsePosition( left ) );
     }
   }
 
+  private static void readTopItemIndex( final Tree tree ) {
+    String topItemIndex = WidgetLCAUtil.readPropertyValue( tree, "topItemIndex" );
+    if( topItemIndex != null ) {
+      final ITreeAdapter treeAdapter = getTreeAdapter( tree );
+      int newIndex = parsePosition( topItemIndex );
+      treeAdapter.setTopItemIndex( newIndex );
+    }
+  }
+  
   private static int parsePosition( final String position ) {
     int result = 0;
     try {
@@ -210,27 +230,69 @@ public final class TreeLCA extends AbstractWidgetLCA {
   //////////////////////////////////////////////////////////////
   // Helping methods to write JavaScript for changed properties
 
+  private static void writeItemHeight( final Tree tree ) throws IOException {
+    JSWriter writer = JSWriter.getWriterFor( tree );
+    Integer newValue = new Integer( tree.getItemHeight( ) );
+    if( WidgetLCAUtil.hasChanged( tree, PROP_ITEM_HEIGHT, newValue ) ) {
+      writer.set( PROP_ITEM_HEIGHT, "itemHeight", newValue, new Integer( 16 ) );
+    }
+  }  
+  
+  public static void writeItemMetrics( final Tree tree )
+    throws IOException 
+  {
+    ItemMetrics[] itemMetrics = getItemMetrics( tree );
+    if( hasItemMetricsChanged( tree, itemMetrics ) ) {
+      JSWriter writer = JSWriter.getWriterFor( tree );
+      for( int i = 0; i < itemMetrics.length; i++ ) {
+        Object[] args = new Object[] {
+          new Integer( i ),
+          new Integer( itemMetrics[ i ].left ),
+          new Integer( itemMetrics[ i ].width ),
+          new Integer( itemMetrics[ i ].imageLeft ),
+          new Integer( itemMetrics[ i ].imageWidth ),
+          new Integer( itemMetrics[ i ].textLeft ),
+          new Integer( itemMetrics[ i ].textWidth )
+        };
+        writer.set( "itemMetrics", args );
+      }
+    }
+  }
+  public static void writeIndentionWidth( final Tree tree )
+  throws IOException 
+  {
+    JSWriter writer = JSWriter.getWriterFor( tree );
+    ITreeAdapter treeAdapter = getTreeAdapter( tree );
+    writer.set( "indentionWidth", treeAdapter.getIndentionWidth() );
+  }
+  
   private static void writeHeaderHeight( final Tree tree ) throws IOException {
     JSWriter writer = JSWriter.getWriterFor( tree );
     Integer newValue = new Integer( tree.getHeaderHeight() );
     writer.set( PROP_HEADER_HEIGHT, "headerHeight", newValue, null );
+  }  
+
+  private void writeColumnCount( final Tree tree ) throws IOException {
+    JSWriter writer = JSWriter.getWriterFor( tree );
+    Integer newValue = new Integer( tree.getColumnCount() );
+    if( WidgetLCAUtil.hasChanged( tree, PROP_COLUMN_COUNT, newValue ) ) {
+      writer.set( PROP_COLUMN_COUNT, "columnCount", newValue, new Integer( 0 ) );
+    }
   }
 
-  private void writeColumnOrder( final Tree tree ) throws IOException {
+  private void writeTreeColumn( final Tree tree ) throws IOException {
     JSWriter writer = JSWriter.getWriterFor( tree );
-    int[] values = tree.getColumnOrder();
-    if( values.length > 0 ) {
-      Integer[] newValue = new Integer[ values.length ];
-      for( int i = 0; i < values.length; i++ ) {
-        newValue[ i ] = new Integer( values[ i ] );
-      }
-      if( WidgetLCAUtil.hasChanged( tree,
-                                    PROP_COLUMN_ORDER,
-                                    newValue,
-                                    new Integer[]{} ) )
-      {
-        writer.set( PROP_COLUMN_ORDER, "columnOrder", newValue, null );
-      }
+    Integer newValue = getTreeColumn( tree );
+    if( WidgetLCAUtil.hasChanged( tree, PROP_TREE_COLUMN, newValue ) ) {
+      writer.set( PROP_TREE_COLUMN, "treeColumn", newValue, new Integer( 0 ) );
+    }
+  }
+  
+  private void writeTopItem( final Tree tree ) throws IOException {
+    JSWriter writer = JSWriter.getWriterFor( tree );
+    Integer newValue = new Integer( getTopItemIndex( tree ) );
+    if( WidgetLCAUtil.hasChanged( tree, PROP_TOP_ITEM_INDEX, newValue ) ) {
+      writer.set( PROP_TOP_ITEM_INDEX, "topItemIndex", newValue, new Integer( 0 ) );
     }
   }
 
@@ -246,31 +308,28 @@ public final class TreeLCA extends AbstractWidgetLCA {
     writer.set( PROP_SCROLL_LEFT, "scrollLeft", newValue, DEFAULT_SCROLL_LEFT );
   }
 
-  private static void writeOverflow( final Tree tree ) throws IOException {
+  private static void writeScrollBars( final Tree tree ) throws IOException {
     boolean hasHChanged = WidgetLCAUtil.hasChanged( tree,
                                                     PROP_HAS_H_SCROLL_BAR,
                                                     hasHScrollBar( tree ),
-                                                    Boolean.TRUE );
+                                                    Boolean.FALSE );
     boolean hasVChanged = WidgetLCAUtil.hasChanged( tree,
                                                     PROP_HAS_V_SCROLL_BAR,
                                                     hasVScrollBar( tree ),
-                                                    Boolean.TRUE );
+                                                    Boolean.FALSE );
     if( hasHChanged || hasVChanged ) {
       boolean scrollX = hasHScrollBar( tree ).booleanValue();
       boolean scrollY = hasVScrollBar( tree ).booleanValue();
-      String overflow;
-      if( scrollX && scrollY ) {
-        overflow = "scroll";
-      } else if( scrollX ) {
-        overflow = "scrollX";
-      } else if( scrollY ) {
-        overflow = "scrollY";
-      } else {
-        overflow = "hidden";
-      }
       JSWriter writer = JSWriter.getWriterFor( tree );
-      writer.set( "treeOverflow", overflow );
+       writer.set( "scrollBarsVisible", new boolean[]{ scrollX, scrollY } );
     }
+  }
+  
+  private static void writeLinesVisible( final Tree tree ) throws IOException
+  {
+    JSWriter writer = JSWriter.getWriterFor( tree );
+    Boolean newValue = Boolean.valueOf( tree.getLinesVisible() );
+    writer.set( PROP_LINES_VISIBLE, "linesVisible", newValue, Boolean.FALSE );
   }
 
   private static void updateSelectionListener( final Tree tree )
@@ -280,7 +339,7 @@ public final class TreeLCA extends AbstractWidgetLCA {
     String prop = PROP_SELECTION_LISTENERS;
     if( WidgetLCAUtil.hasChanged( tree, prop, newValue, Boolean.FALSE ) ) {
       JSWriter writer = JSWriter.getWriterFor( tree );
-      writer.set( "selectionListeners", newValue );
+      writer.set( "hasSelectionListeners", newValue );
     }
   }
 
@@ -288,20 +347,99 @@ public final class TreeLCA extends AbstractWidgetLCA {
   // Helping methods
 
   private static Integer getScrollLeft( final Tree tree ) {
-    Object adapter = tree.getAdapter( ITreeAdapter.class );
-    ITreeAdapter treeAdapter = ( ITreeAdapter )adapter;
+    ITreeAdapter treeAdapter = getTreeAdapter( tree );
     return new Integer( treeAdapter.getScrollLeft() );
   }
 
+  private static int getTopItemIndex( final Tree tree ) {
+    ITreeAdapter treeAdapter = getTreeAdapter( tree );
+    return treeAdapter.getTopItemIndex();
+  }
+  
   private static Boolean hasHScrollBar( final Tree tree ) {
-    Object adapter = tree.getAdapter( ITreeAdapter.class );
-    ITreeAdapter treeAdapter = ( ITreeAdapter )adapter;
+    ITreeAdapter treeAdapter = getTreeAdapter( tree );    
     return Boolean.valueOf( treeAdapter.hasHScrollBar() );
   }
 
   private static Boolean hasVScrollBar( final Tree tree ) {
-    Object adapter = tree.getAdapter( ITreeAdapter.class );
-    ITreeAdapter treeAdapter = ( ITreeAdapter )adapter;
+    ITreeAdapter treeAdapter = getTreeAdapter( tree );
     return Boolean.valueOf( treeAdapter.hasVScrollBar() );
   }
+
+  private static Integer getTreeColumn( final Tree tree ) {
+    int[] values = tree.getColumnOrder();
+    return new Integer( values.length > 0 ? values[ 0 ] : 0 );
+  }
+  
+  private static ITreeAdapter getTreeAdapter( Tree tree ) {
+    Object adapter = tree.getAdapter( ITreeAdapter.class );
+    return ( ITreeAdapter )adapter;
+  }
+
+  /////////////////
+  // Item Metrics:
+
+  
+  // TODO: merge with Table:
+  static final class ItemMetrics {
+    int left;
+    int width;
+    int imageLeft;
+    int imageWidth;
+    int textLeft;
+    int textWidth;
+
+    public boolean equals( final Object obj ) {
+      boolean result;
+      if( obj == this ) {
+        result = true;
+      } else  if( obj instanceof ItemMetrics ) {
+        ItemMetrics other = ( ItemMetrics )obj;
+        result =  other.left == left
+               && other.width == width
+               && other.imageLeft == imageLeft
+               && other.imageWidth == imageWidth
+               && other.textLeft == textLeft
+               && other.textWidth == textWidth;
+      } else {
+        result = false;
+      }
+      return result;
+    }
+
+    public int hashCode() {
+      String msg = "ItemMetrics#hashCode() not implemented";
+      throw new UnsupportedOperationException( msg );
+    }
+  }
+
+
+  public static ItemMetrics[] getItemMetrics( Tree tree ) {
+    int columnCount = Math.max( 1, tree.getColumnCount() );
+    ItemMetrics[] result = new ItemMetrics[ columnCount ];
+    for( int i = 0; i < columnCount; i++ ) {
+      result[ i ] = new ItemMetrics();
+    }
+    ITreeAdapter adapter = getTreeAdapter( tree );
+    for( int i = 0; i < columnCount; i++ ) {
+      result[ i ].left = adapter.getCellLeft( i );
+      result[ i ].width = adapter.getCellWidth( i );
+      result[ i ].imageLeft = result[ i ].left + adapter.getImageOffset( i );   
+      result[ i ].imageWidth = adapter.getItemImageSize( i ).x;
+      result[ i ].textLeft = result[ i ].left + adapter.getTextOffset( i );
+      result[ i ].textWidth = adapter.getTextMaxWidth( i );
+    }
+    return result;
+  }
+
+  public static void preserveItemMetrics( final Tree tree ) {
+    IWidgetAdapter adapter = WidgetUtil.getAdapter( tree );
+    adapter.preserve( PROP_ITEM_METRICS, getItemMetrics( tree ) );
+  }
+
+  private static boolean hasItemMetricsChanged( final Tree tree,
+                                                final ItemMetrics[] metrics  )
+  {
+    return WidgetLCAUtil.hasChanged( tree, PROP_ITEM_METRICS, metrics );
+  }  
 }
